--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,16 +3,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap Login Form with Avatar Image</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+<br>
+<br>
 <div class="login-form">
-  <form action="/examples/actions/confirmation.php" method="post">
+  <form>
     <div class="avatar">
-      <img src="/examples/images/avatar.png" alt="Avatar">
+      <img src="https://cdn.iconscout.com/icon/free/png-256/avatar-375-456327.png" alt="Avatar">
     </div>
     <h2 class="text-center">Member Login</h2>
     <div class="form-group">
