--- a/src/app/promotion-card/promotion-card.component.html
+++ b/src/app/promotion-card/promotion-card.component.html
@@ -1,3 +1,10 @@
-<p>
-  promotion-card works!
-</p>
+<div class="card-columns">
+  <div class="card border-info mb-3" style="max-width: 20rem;" *ngFor="let card of cards">
+    <img class="card-img-top" src="{{card.LINK}}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">{{card.title}}</h5>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
